--- a/src/App.css
+++ b/src/App.css
@@ -306,6 +306,10 @@ button:hover {
 }
 #aboutus{
    color: rgb(0, 255, 0);
+   text-decoration:  underline;
+}
+#c_mes{
+    color: rgb(255, 255, 0);
 }
   
   
